# melody-generator

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/: __init__.py  main.py
src/entities/: __init__.py  melody.py  note.py  scale.py  settings.py
src/services/: __init__.py  exporter.py  generator.py  player.py  visualizer.py
