[project]
name = "melody-generator"
version = "0.1.0"
description = "Генератор мелодий на основе музыкальных гамм"
requires-python = ">=3.9"
dependencies = [
    "mido>=1.3.0",
    "matplotlib>=3.9.0",
    "pygame>=2.5.0",
    "pillow>=10.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "C", "N", "I", "BLE", "SIM"]

[tool.isort]
profile = "black"

[tool.pre-commit]
