[tool.poetry]
name = "melody-generator"
version = "0.1.0"
description = "Генератор мелодий на основе музыкальных гамм"
authors = ["Токунова Полина <p.tokunova@yandex.ru>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
mido = "^1.3.0"
matplotlib = "^3.9.0"
pygame = "^2.5.0"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
ruff = "^0.2.0"
isort = "^5.12.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "C", "N", "I", "BLE", "SIM"]

[tool.isort]
profile = "black"
